# 3D-acoustic-simulator

./: CMakeLists.txt
includes/: defines.h
includes/acousticModule/: AccSim.c  AccSim.h
includes/glad/: glad.c  glad.h  glad_wgl.c  glad_wgl.h
includes/modelsUtils/: modelsUtils.c  modelsUtils.h
includes/myLinearMath/: matrix.c  matrix.h  vector.c  vector.h
includes/opencl/: kernel_opencl.c  kernel_opencl.h
includes/sceneManager/: sceneManager.c  sceneManager.h
includes/shaderUtils/: shaderLT.c  shaderLT.h
src/: main.c
